...
            .navigationTitle("My Books")
            .toolbar {
                Button {
                    showAddBookSheet.toggle()
                } label: {
                    Image(systemName: "plus.circle.dashed")
                        .imageScale(.large).accessibilityIdentifier("Add_Book")
                    
                }
            }
            
            .sheet(isPresented: $showAddBookSheet) {
                NewBookView()
...
